#11 fix self issue

--- a/src/blocks/additions/additions.pug
+++ b/src/blocks/additions/additions.pug
@@ -4,5 +4,5 @@ mixin additions({noBorder, title, desc, icon})
     - classes.push("additions_without-border")
   div(class=classes)
     .additions__title= title
-    div.description= desc
+    div.additions__description= desc
     i.additions__icon.material-icons= icon
