--- a/src/blocks/subscription/subscription.pug
+++ b/src/blocks/subscription/subscription.pug
@@ -2,6 +2,6 @@ include ../text-field/text-field
 
 mixin subscription({placeholder, link="/mock-address"})
   .subscription
-    form.subscription-form(action=link, method="get")
+    form.subscription__form(action=link, method="get")
       +text-field({type: "text", placeholder: placeholder})
       button.subscription__button arrow_forward
