--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -17,7 +17,7 @@ block content
   .search-room
     .search-room__grid
       sidebar.search-room__sidebar
-        form.search-room-form(action="/mock-address", method="post")
+        form.search-room__form(action="/mock-address", method="post")
           .search-room__sidebar-item
             +dropdown-field({ title: "Даты пребывания в отеле", value: "19 авг - 23 авг" })
 
