--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -7,7 +7,7 @@ include ../configuration-dropdown/configuration-dropdown
 
 mixin booking-card()
   .booking-card
-    form.booking-card-form(action="/mock-address", method="post")
+    form.booking-card__form(action="/mock-address", method="post")
       .booking-card__header
         +apartment-info({number: 888, lux: true, big: true})
         +price("9 990")
