--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -15,14 +15,14 @@ mixin footer({main, navigation, copy, subscription: {title, text, placeholder}})
           .footer__nav-container
             each link_block in navigation
               section.footer__nav
-                .footer__block__header
+                .footer__block-header
                   h3.footer__subtitle= link_block.title
                 p.footer__paragraph
                   each link in link_block.links
                     a.footer__link(href=link.url)= link.text
         
           section.footer__block
-            .footer__block__header
+            .footer__block-header
               h3.footer__subtitle= title
             p.footer__paragraph= text
             .footer__subscription
