#11 all fix issue

--- a/src/blocks/apartment-info/apartment-info.scss
+++ b/src/blocks/apartment-info/apartment-info.scss
@@ -13,11 +13,11 @@
     text-transform: uppercase;
     margin: 0;
 
-    &_font-medium {
+    &_font_medium {
       font-size: 1.2rem;
     }
 
-    &_font-large {
+    &_font_large {
       font-size: 1.5rem;
     }
   }
