--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -12,7 +12,7 @@
     height: 70px;
     border-radius: 6px;
 
-    &_background-dark {
+    &_background_dark {
       &-100 {
         background-color: $dark-shade-100;
       }
@@ -34,11 +34,11 @@
       }
     }
 
-    &_background-purple {
+    &_background_purple {
       background-color: $purple;
     }
 
-    &_background-green {
+    &_background_green {
       background-color: $green;
     }
   }
