--- a/src/blocks/invoice/invoice.pug
+++ b/src/blocks/invoice/invoice.pug
@@ -9,7 +9,7 @@ mixin invoice({ standing, standingPrice, services, servicesPrice, additional, ad
     .invoice__row
       .invoice__service.invoice__service_with-icon= additional
       div.invoice__sum!= additionalPrice
-    .invoice__row.invoice__row_font-large
+    .invoice__row.invoice__row_font_large
       h2.invoice__block Итого
       .invoice__line
       h2.invoice__block!= total
