--- a/src/blocks/invoice/invoice.scss
+++ b/src/blocks/invoice/invoice.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     margin-bottom: 10px;
 
-    &_font-large {
+    &_font_large {
       font-family: Quicksand, OpenSans, sans-serif;
       font-weight: bold;
       color: $dark-shade-100;
