--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -63,7 +63,7 @@
     text-decoration: none;
     color: $dark-shade-50;
 
-    &_bold-text {
+    &_font_bold {
       font-weight: bold;
     }
   }
