--- a/src/blocks/price/price.scss
+++ b/src/blocks/price/price.scss
@@ -4,11 +4,11 @@
   font-family: Montserrat, OpenSans, sans-serif;
   color: $dark-shade-50;
 
-  &_font-bold {
+  &_font_bold {
     font-weight: bold;
   }
 
-  &_font-small {
+  &_font_small {
     font-size: .75rem;
   }
 }
