--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -3,7 +3,7 @@
 
 .landing {
   background-image: url(./images/landing-background.png);
-  background-position-x: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
 
