--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -24,7 +24,7 @@ mixin register-card()
       .register-card__service
         h3.register-card__subtitle Данные для входа в сервис
         .register-card__item
-          +text-field({type: "text", placeholder: "Email"})
+          +text-field({type: "email", placeholder: "Email"})
         .register-card__item.register-card__item_without-margin
           +text-field({type: "password", placeholder: "Пароль"})
         .register-card__proposal
