--- a/src/blocks/subscription/subscription.pug
+++ b/src/blocks/subscription/subscription.pug
@@ -3,5 +3,5 @@ include ../text-field/text-field
 mixin subscription({placeholder, link="/mock-address"})
   .subscription
     form.subscription__form(action=link, method="get")
-      +text-field({type: "text", placeholder: placeholder})
+      +text-field({type: "email", placeholder: placeholder})
       button.subscription__button arrow_forward
