--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -39,12 +39,12 @@ block content
           .form-elements__head
             .form-elements__title Text field
             .form-elements__desc Default
-          +text-field({type: "text", placeholder: "Email"})
+          +text-field({type: "email", placeholder: "Email"})
         .form-elements__item
           .form-elements__head
             .form-elements__title Text field
             .form-elements__desc Hover / Focus
-          +text-field({type: "text", placeholder: "Email", focused: true})
+          +text-field({type: "email", placeholder: "Email", focused: true})
         .form-elements__item
           .form-elements__head
             .form-elements__title Dropdown
