#27 fix bullet block in room-details page

--- a/src/blocks/bullet/bullet.pug
+++ b/src/blocks/bullet/bullet.pug
@@ -1,5 +1,11 @@
 mixin bullet(listItems)
   ul.bullet
     each item in listItems
-      li.bullet__element
-        span.bullet__item= item
+      - let classes = ["bullet__element"]
+      if item.color
+        - classes.push("bullet__element_compacted")
+        - classes.push("bullet__element_" + item.color)
+        li(class=classes)= item.text
+      else
+        li.bullet__element
+          span.bullet__item= item.text
