--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -30,7 +30,7 @@
       padding-left: 14px;
     }
 
-    &_yellow:link {
+    &_yellow:before {
       background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
     }
 
