--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -240,9 +240,9 @@ block content
               .form-elements__title Bullet list 
 
             +bullet([
-              "Нельзя с питомцами",
-              "Без вечеринок и мероприятий",
-              "Время прибытия — после 13:00, а выезд до 12:00"
+              { text: "Нельзя с питомцами" },
+              { text: "Без вечеринок и мероприятий" },
+              { text: "Время прибытия — после 13:00, а выезд до 12:00" }
             ])
 
       .form-elements__bot 
