#27 fix element name in price block

--- a/src/blocks/price/price.pug
+++ b/src/blocks/price/price.pug
@@ -1,4 +1,4 @@
 mixin price(price)
   .price
-    span.price_font_bold #{price}&#8381; 
-    span.price_font_small в сутки
+    span.price__primary #{price}&#8381; 
+    span.price__secondary в сутки
