#29 moved slider options from class to mixin

--- a/src/blocks/slider/slider.pug
+++ b/src/blocks/slider/slider.pug
@@ -1,8 +1,8 @@
-mixin slider({title="Range", footerText})
+mixin slider({title="Range", footerText, min, max, type, from, to})
   .slider
     .slider__header
       .slider__title= title
       .slider__min-max
-    input.js-slider
+    input.js-slider(data-min=min data-max=max data-type=type data-from=from data-to=to)
     if footerText
       .slider__footer= footerText
