--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -195,7 +195,14 @@ block content
       .form-elements__right 
         .form-elements__item
           .form-elements__slider
-            +slider({title: "Range slider"})
+            +slider({
+              title: "Range slider",
+              type: "double",
+              min: "500",
+              max: "15000",
+              from: "5000",
+              to: "10000"
+              })
 
         .form-elements__item
           .form-elements__head.form-elements__head_accent
