--- a/src/blocks/configuration-dropdown/configuration-dropdown.pug
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.pug
@@ -1,3 +1,2 @@
-mixin configuration-dropdown({ name })
-  - let className = `js-dropdown-${name}`
-  input(class=className)
+mixin configuration-dropdown()
+  input.js-dropdown
