--- a/src/blocks/find-apartments-card/find-apartments-card.pug
+++ b/src/blocks/find-apartments-card/find-apartments-card.pug
@@ -12,7 +12,7 @@ mixin apartments()
             inLabel: "Прибытие",
             outLabel: "Выезд"
           })
-        .find-apartments-card__item.find-apartments-card__item_high
+        .find-apartments-card__item.find-apartments-card__item_high.js-find-apartments-card__dropdown
           h3.find-apartments-card__subtitle Гости
           +configuration-dropdown({ name: "find-apartments" })
       .find-apartments-card__button
