--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -49,7 +49,7 @@ block content
           .form-elements__head
             .form-elements__title Dropdown
             .form-elements__desc Default
-          +configuration-dropdown({ name: "guest-close" })
+          +configuration-dropdown()
         .form-elements__item
           .form-elements__head
             .form-elements__title Masked text field
@@ -79,14 +79,14 @@ block content
               .form-elements__head
                 .form-elements__title Dropdown 
                 .form-elements__desc Default
-              +configuration-dropdown({ name: "room-close" })
+              +configuration-dropdown()
 
         .form-elements__item.form-elements__item_with-big-space
           .form-elements__small-container.js-form-elements__dropdown-room-open
             .form-elements__head
               .form-elements__title Dropdown 
               .form-elements__desc Default
-            +configuration-dropdown({ name: "room-open" })
+            +configuration-dropdown()
 
         .form-elements__top-margin
           .form-elements__item
@@ -176,7 +176,7 @@ block content
         .form-elements__item.js-form-elements__dropdown-guest-open
           .form-elements__head.form-elements__head_accent
             .form-elements__title Dropdown
-          +configuration-dropdown({ name: "guest-open" })
+          +configuration-dropdown()
 
         .form-elements__top-margin
           .form-elements__item
@@ -239,7 +239,7 @@ block content
         .form-elements__item.js-form-elements__dropdown-quest-open-many
           .form-elements__head.form-elements__head_accent
             .form-elements__title Dropdown 
-          +configuration-dropdown({ name: "guest-open-many" })
+          +configuration-dropdown()
 
         .form-elements__top-margin
           .form-elements__item
