--- a/src/blocks/account/account.pug
+++ b/src/blocks/account/account.pug
@@ -2,6 +2,6 @@ include ../rounded-button/rounded-button
 
 mixin account({text, buttonText, isLarge=true, withoutPaddingsButton=false})
   .account
-    .account__left= text
-    .account__right
+    .account__text= text
+    .account__button
       +rounded-button({text: buttonText, isLarge: isLarge, withoutPaddings: withoutPaddingsButton})
